--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
  	<title>Hallo Coursera!</title>
  </head>
  <body>
- <h1>Hallo Coursera! How are do doing?</h1>  
+ <h1>Hallo Coursera! How are do doing?!</h1>  
  
  </body>
  </html>
